# crawl-url

./: .gitignore  CLAUDE.md  CRUSH.md  LICENSE  README.md  WINDOWS_COMPATIBILITY.md  pyproject.toml
PRPs/: crawl-url.md
PRPs/ai_docs/: modern_cli_packaging.md  pytermgui_guide.md  sitemap_parsing_guide.md  web_crawling_patterns.md
src/crawl_url/: __init__.py  cli.py
src/crawl_url/core/: __init__.py  crawler.py  models.py  sitemap_parser.py  ui.py
src/crawl_url/utils/: storage.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_crawler.py  test_models.py  test_sitemap_parser.py  test_storage.py  test_ui.py
